--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="bg-surface-color">
         <nav class="container">
             <a href="#">
-                <img src="assets/icon/Logo.svg" alt="Logo MArca">
+                <img src="assets/Icon/Logo.svg" alt="Logo MArca">
             </a>
             <ul id="primary-menu">
                 <li>
